compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_declaration_of_list.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  let c = [3.1415, 0.33333333]\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  let c = [3.1415, 0.33333333]
          ↑                   
}


----- AFTER ACTION
const floats = [3.1415, 0.33333333]

public fn main() {
  let c = floats
}
