compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_declaration_of_string.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  let c = \"constant\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  let c = "constant"
          ↑         
}


----- AFTER ACTION
const string = "constant"

public fn main() {
  let c = string
}
