compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_declaration_of_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  let #(one, two, three) = #(\"one\", \"two\", \"three\")\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  let #(one, two, three) = #("one", "two", "three")
                           ▔↑                      
}


----- AFTER ACTION
const value = #("one", "two", "three")

public fn main() {
  let #(one, two, three) = value
}
