compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_inside_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main(result) {\n  case result {\n    Ok(value) -> value + 1\n    Error(_) -> panic\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main(result) {
  case result {
    Ok(value) -> value + 1
                         ↑
    Error(_) -> panic
  }
}


----- AFTER ACTION
const int = 1

public fn main(result) {
  case result {
    Ok(value) -> value + int
    Error(_) -> panic
  }
}
