compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_inside_use_1.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  use x <- result.try(todo)\n  Ok(123)\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  use x <- result.try(todo)
  Ok(123)
  ↑      
}


----- AFTER ACTION
const result = Ok(123)

public fn main() {
  use x <- result.try(todo)
  result
}
