compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_nested_inside_in_expr.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  [#(\"a\", 0), #(\"b\", 1), #(\"a\", 2)]\n  |> key_filter(\"a\")\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  [#("a", 0), #("b", 1), #("a", 2)]
   ▔↑                              
  |> key_filter("a")
}


----- AFTER ACTION
const value = #("a", 0)

public fn main() {
  [value, #("b", 1), #("a", 2)]
  |> key_filter("a")
}
